@hzf@项目使用 Java 8，List.of() 是 Java 9+ 才有的方法。改为 Collections.singletonList()：